[FIX] table pagination's select align

--- a/components/pagination/style/index.less
+++ b/components/pagination/style/index.less
@@ -206,7 +206,6 @@
 
     &-size-changer.@{ant-prefix}-select {
       display: inline-block;
-      line-height: 20px;
       width: auto;
       vertical-align: text-bottom;
 
